--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,9 @@
 body{
-    padding-left: 400px;
     margin-top: 100px;
-    width: 2000px;
+    width: 100%;
     max-width: 100%;
   }
-  .buttons{
+  #buttons{
     width: 800px;
     max-width: 100%;
     margin:  auto;
@@ -15,19 +14,18 @@ body{
   }
   
   button{
-    padding: 11px 50px;
     max-width: 100%;
     font-size: 16px;
     font-weight: 600;
     text-align: center;
     white-space: nowrap;
-      color: #fff;
+    color: #fff;
     background-color: #02ac46;
-      border: 2px solid #02ac46;
+    border: 2px solid #02ac46;
     border-radius: 4px;
     cursor: pointer;
   }
-  .messages{
+  #messages{
   text-align: center;
   padding: 20px 0;
   }
