--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{
   width: 2000px;
   max-width: 100%;
 }
-.buttons{
+#buttons{
   width: 800px;
   max-width: 100%;
   margin:  auto;
@@ -27,7 +27,7 @@ button{
   border-radius: 4px;
   cursor: pointer;
 }
-.messages{
+#messages{
 text-align: center;
 padding: 20px 0;
 }
